--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      background-color: #000;
+      background-color: white;
       color: #fff;
       padding: 20px;
       text-align: center;
