--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="msvalidate.01" content="89E119164B044B0B4EE80A50AB60418E" />
+  <meta name="google-site-verification" content="ksP9r5n57DuVSrMoPDENEIBHannLwcQzYrTnoiGv-18" />
   <title>Garmin eTrex 10 Handheld GPS</title>
   <meta name="description" content="Learn everything about the Garmin eTrex 10 Handheld GPS, including features, design, battery life, usability, and comparisons with other GPS units.">
   <meta name="keywords" content="Garmin eTrex 10, handheld GPS, Garmin GPS, outdoor navigation, GPS for hiking, Garmin eTrex review">
